--- a/lamborghini.css
+++ b/lamborghini.css
@@ -54,8 +54,7 @@ header.startup h1 {
   border-width: 5px;
   cursor: pointer;
 }
-
-signup form {
+#mc_embed_signup form {
     display: block;
     position: relative;
     text-align: center;
