--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ hr {
 
 header.startup {
   background-position: center;
-  background-image: url("lamborghini.jpeg");
+  background-image: url("header.jpeg");
   background-size: cover;
   width: auto;
   height: 100%;
